--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,7 @@
 
+            .heading {
+                       color:red:
+            }
             body {
                 background-color:lightblue;
             }
