--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
             .heading {
-                       color:red:
+                       color:red;
             }
             body {
                 background-color:lightblue;
