--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
             .heading {
-                       color:#8B0000;
+                       color:#BE3E23;
             }
             body {
                 background-color:lightblue;
