--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,9 @@
-
+.banner {
+            display: block:
+            margin-left: auto;
+            margin-right: auto:
+}
+            
             .heading {
                        color:#BE3E23;
             }
