--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 .banner {
-            display: block:
+            display: block;
             margin-left: auto;
-            margin-right: auto:
+            margin-right: auto;
 }
             
             .heading {
