--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 .banner {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
             
             .heading {
