--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width:"100%"
 }
              .heading {
                        color:#BE3E23;
