--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:100%
+  width:100%;
 }
              .heading {
                        color:#BE3E23;
