--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,7 @@
-.banner {
+.banne{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:"100%";
 }
              .heading {
                        color:#BE3E23;
