--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
   .banner {
   display: block;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
              .heading {
                        color:#BE3E23;
