--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,8 +10,8 @@
                 background-color:lightblue;
             }
  .monkey  {
-            margin-left: 111.667; 
-  margin-right: 111.667;
+            margin-left: auto; 
+  margin-right: auto;
             }
             .table {
         text-align: center;
