--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,6 @@
   margin-right: auto;
             }
             .table {
-        text-align: center;
-      }
-       
+margin-left: auto; 
+  margin-right: auto;      
+}
