--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@
   margin-right: auto;
             }
             .table {
+                display: block;
 margin-left: auto; 
   margin-right: auto;      
 }
