--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,6 @@
             margin-left: auto; 
   margin-right: auto;
             }
-            .table {
-                margin-left: auto; 
-  margin-right: auto;     
+             .table {
+               text-align: center 
 }
